fix : Header z-index

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -136,6 +136,7 @@
     top: 20;
     left: 30;
     right: 30;
+    z-index: 30;
     .form {
       button {
         border: none;
